--- a/project.ipynb
+++ b/project.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "267d1aa0",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "0a595980",
    "metadata": {},
    "outputs": [],
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "c403f543",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "id": "74280b92",
    "metadata": {},
    "outputs": [],
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "id": "1ea03825",
    "metadata": {},
    "outputs": [],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "id": "9e6d0c70",
    "metadata": {},
    "outputs": [],
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "id": "4901c850",
    "metadata": {},
    "outputs": [],
@@ -320,17 +320,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "id": "bd7a093b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Jack is middle-aged in his 40s.'"
+       "'40s'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +381,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f7608a6",
+   "id": "985c6b12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chatbot: Jack is described as a middle-aged man in his 40s, a successful businessman, and Sarah's boss. He has a no-nonsense attitude and is fiercely loyal to his friends and family. He is married to Alice and the play is set in England.\n",
+      "Chatbot: Donna could be considered an actor from USA with Musical medium as she is a seasoned performer on stage in a Musical set in USA.\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    user_input = input(\"You: \")\n",
+    "    if user_input.lower() in [\"exit\", \"quit\", \"bye\"]:\n",
+    "        print(\"Chatbot: Goodbye!\")\n",
+    "        break\n",
+    "    response = answer_question(user_input, df_embedding)\n",
+    "    print(\"Chatbot:\", response)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54a029d6",
    "metadata": {},
    "outputs": [],
    "source": []
